--- a/index.html
+++ b/index.html
@@ -10,17 +10,26 @@
     <h2>My top 3 Movies of all-time.</h2>
     <hr>
     <ol>
-        <li class="list">
-            <h3>Hum Sath Sath hai</h3>
-            <p>This is my favourite movie of all time.The movie is all about family.It is an amazing movie.</p>
-        </li>
-        <li class="list">
-            <h3>Yeh Jawaani Hai Deewani</h3>
-            <p>One of my top favourite movies i have watched.</p>
-        </li>
+        <table>
+            <tr>
+                <li class="list">
+                    <h3>Hum Sath Sath hai</h3>
+                    <p>This is my favourite movie of all time.The movie is all about family.It is an amazing movie.</p>
+                    <img src="hssh.webp" alt="movie">
+                </li>
+            </tr>
+            <tr>
+                <li class="list">
+                    <h3>Yeh Jawaani Hai Deewani</h3>
+                    <p>One of my top favourite movies i have watched.</p>
+                    <img src="yjhd.png" alt="movie">
+                </li>
+            </tr>
+        </table>
         <li class="list">
             <h3>Stranger Things</h3>
             <p>It's one of my favourite hollywood series.</p>
+            <img src="st.jpg" alt="movie">
         </li>
     </ol>
 </body>
